--- a/src/components/App/index.module.scss
+++ b/src/components/App/index.module.scss
@@ -9,9 +9,6 @@ div.wrap {
   justify-content: center;
   align-items: center;
 
-  background:
-    rgba($colorTint, 0.05)
-    url('~/src/images/bg-pattern.png')
-    center;
+  background: #eee;
 
 }
